force-app/main/default/objects/clariti__BankDeposit__c/clariti__BankDeposit__c.object-meta.xml
<CustomObject>
    <label>Bank Deposit</label>
    <nameField>
        <displayFormat>BD-{MM}{DD}{YYYY}-{0000}</displayFormat>
        <label>Bank Deposit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bank Deposits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>