force-app/main/default/objects/clariti__BankDeposit__c/fields/clariti__DateOfDeposit__c.field-meta.xml
<CustomField>
    <fullName>clariti__DateOfDeposit__c</fullName>
    <label>Date of Deposit</label>
    <type>DateTime</type>
</CustomField>