force-app/main/default/objects/clariti__BankDeposit__c/fields/clariti__DepositBagNumber__c.field-meta.xml
<CustomField>
    <fullName>clariti__DepositBagNumber__c</fullName>
    <label>Deposit Bag Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>