force-app/main/default/objects/clariti__BankDeposit__c/fields/clariti__DepositSlipNumber__c.field-meta.xml
<CustomField>
    <fullName>clariti__DepositSlipNumber__c</fullName>
    <label>Deposit Slip Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>