force-app/main/default/objects/clariti__BankDeposit__c/fields/clariti__Location__c.field-meta.xml
<CustomField>
    <fullName>clariti__Location__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Location</label>
    <referenceTo>MUSW__Location__c</referenceTo>
    <relationshipLabel>Bank Deposits</relationshipLabel>
    <relationshipName>BankDeposits</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>