force-app/main/default/objects/clariti__BankDeposit__c/fields/clariti__TotalCashBalance__c.field-meta.xml
<CustomField>
    <fullName>clariti__TotalCashBalance__c</fullName>
    <label>Total Cash Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>