force-app/main/default/objects/clariti__BankDeposit__c/fields/clariti__TotalCheckBalance__c.field-meta.xml
<CustomField>
    <fullName>clariti__TotalCheckBalance__c</fullName>
    <label>Total Check Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>