force-app/main/default/objects/clariti__BankDeposit__c/validationRules/clariti__DepositBagNumberIsRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>clariti__DepositBagNumberIsRequired</fullName>
    <active>true</active>
    <errorConditionFormula>$CustomMetadata.clariti__FinancialsFeatureEnablementSettings__mdt.clariti__BankDepositBagNumberIsRequired.clariti__Enable__c &amp;&amp;  ISBLANK(clariti__DepositBagNumber__c) &amp;&amp; ISPICKVAL(clariti__Status__c, &apos;Closed&apos;)</errorConditionFormula>
    <errorDisplayField>clariti__DepositBagNumber__c</errorDisplayField>
    <errorMessage>Deposit Bag Number is required.</errorMessage>
</ValidationRule>