force-app/main/default/objects/clariti__BankDeposit__c/validationRules/clariti__DepositSlipNumberIsRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>clariti__DepositSlipNumberIsRequired</fullName>
    <active>true</active>
    <errorConditionFormula>$CustomMetadata.clariti__FinancialsFeatureEnablementSettings__mdt.clariti__BankDepositSlipNumberIsRequired.clariti__Enable__c &amp;&amp;  ISBLANK(clariti__DepositSlipNumber__c) &amp;&amp; ISPICKVAL(clariti__Status__c, &apos;Closed&apos;)</errorConditionFormula>
    <errorDisplayField>clariti__DepositSlipNumber__c</errorDisplayField>
    <errorMessage>Deposit Slip Number is required.</errorMessage>
</ValidationRule>