force-app/main/default/objects/clariti__BankDeposit__c/validationRules/clariti__UserDoesNotHaveEditBankDepositPerm.validationRule-meta.xml
<ValidationRule>
    <fullName>clariti__UserDoesNotHaveEditBankDepositPerm</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(PRIORVALUE(clariti__Status__c), &apos;Closed&apos;) &amp;&amp;
!ISNEW() &amp;&amp;
((!ISCHANGED(clariti__Status__c) &amp;&amp; $Permission.clariti__ManageBankDeposits) || !$Permission.clariti__ManageBankDeposits)</errorConditionFormula>
    <errorMessage>You do not have permission to edit a closed Bank Deposit.</errorMessage>
</ValidationRule>