force-app/main/default/objects/clariti__BankDeposit__c/validationRules/clariti__UserDoesNotHaveManageBankDepositPerm.validationRule-meta.xml
<ValidationRule>
    <fullName>clariti__UserDoesNotHaveManageBankDepositPerm</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(clariti__Status__c) &amp;&amp; ISPICKVAL(clariti__Status__c, &apos;Closed&apos;) &amp;&amp; !$Permission.clariti__ManageBankDeposits</errorConditionFormula>
    <errorMessage>You do not have permission to manage Bank Deposits.</errorMessage>
</ValidationRule>