force-app/main/default/objects/clariti__BankDeposit__c/listViews/clariti__OpenBankDeposits.listView-meta.xml
<ListView>
    <fullName>clariti__OpenBankDeposits</fullName>
    <columns>NAME</columns>
    <columns>clariti__Status__c</columns>
    <columns>clariti__TotalBalance__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>clariti__Status__c</field>
        <operation>equals</operation>
        <value>In Progress</value>
    </filters>
    <label>Open Bank Deposits</label>
</ListView>